show % of total raffle entries when reward is redeemed